Improved the solution with Virtual threads